<resources>
    <string name="app_name">RetrofitCRUD</string>
    <string name="add_user">Add User</string>
    <string name="fetch_user">Fetch User</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Descripion</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>