<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txt_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txt_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"/>

</LinearLayout>